Prevent mobile first-paint sidebar flash and keep collapsed width

--- a/src/App.scss
+++ b/src/App.scss
@@ -93,6 +93,7 @@
 
 @media (max-width: 900px) {
   .app {
+    --sidebar-width: 56px;
     grid-template-columns: var(--sidebar-width) 1fr;
     grid-template-areas:
       'header header'
